# scurri

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini  test.py
.github/: dependabot.yml
.github/workflows/: ci.yml
scurri/: __init__.py  api.py  apisession.py  exceptions.py  models.py  request.py
tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_request.py  test_scurri_api_session.py
