[tool.poetry]
name = "scurri"
version = "0.1.0"
description = ""
authors = ["Luke Shiner <luke@lukeshiner.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
python-dateutil = "^2.8.2"
types-python-dateutil = "^2.8.4"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^21.12b0"
flake8 = "^4.0.1"
pytest = "^6.2.4"
mypy = "^0.931"
coveralls = "^3.3.1"
requests-mock = "^1.9.3"
pytest-cov = "^3.0.0"
flake8-docstrings = "^1.6.0"
types-requests = "^2.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
